objects/PepperEmailTemplates__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Borrower_Statement__c</fullName>
        <label>Borrower Statement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dishonor_Notice__c</fullName>
        <label>Dishonor_Notice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>referral_email_template__c</fullName>
        <label>referral email template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>welcome_email_template__c</fullName>
        <label>welcome email template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PepperEmailTemplates</label>
</CustomObject>